--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "<span style = 'font-size: 85%; color: white'>Introduction to Multilevel Modelling</span>"
-subtitle: "<span style = 'font-size: 80%;'>SGSSS Summer School 2023</span>"
-author: "Patricio Troncoso & Ana Morales-Gómez<br><span style = 'font-size: 60%;'>University of Glasgow<br>University of Sheffield<br>Scottish Centre for Administrative Data Research (SCADR)</span>" 
+subtitle: "<span style = 'font-size: 80%;'>SGSSS Summer School 2024</span>"
+author: "Patricio Troncoso & Ana Morales-Gómez<br><span style = 'font-size: 60%;'>University of Edinburgh<br>University of Sheffield<br>Scottish Centre for Administrative Data Research (SCADR)</span>" 
 output:
   xaringan::moon_reader:
     css: xaringan-themer.css
@@ -46,13 +46,13 @@ knitr::include_graphics("https://www.scadr.ac.uk/sites/default/files/styles/peop
 
 ```
 
-- Research Fellow, Urban Studies, University of Glasgow
+- Lecturer in Youth Studies, The University of Edinburgh
 
 - Works (mostly) in Educational research
 
-- Twitter: [@ptronc](https://twitter.com/ptronc)
+- Twitter: [@p_tronc](https://twitter.com/ptronc)
 
-- Email: [Patricio.Troncoso@glasgow.ac.uk](mailto:Patricio.Troncoso@glasgow.ac.uk)
+- Email: [Patricio.Troncoso@ed.ac.uk](mailto:Patricio.Troncoso@ed.ac.uk)
 
 ]
 
@@ -85,15 +85,16 @@ We are both affiliated to the Scottish Centre for Administrative Data Research [
   
 - 10:00-10:30 - A brief overview of linear regression
 - 10:30-11:00 - Multilevel data structures and examples
-- 11:00-11:15 - Break
-- 11:15-11:45 - Variance components and group-specific estimates
-- 11:45-12:30 - Practical 1
-- 12:30-13:30 - Lunch 
-- 13:30-13:50 - Accounting for individual and group characteristics: fixed effects
+- 11:10-11:30 - Variance components and group-specific estimates
+- 11:30-12:00 - Break
+- 12:00-12:30 - Practical 1
+- 12:30-13:00 - Accounting for individual and group
+- 13:00-14:00 - Lunch 
+characteristics: fixed effects
 - 14:00-14:30 - Practical 2
 - 14:30-15:00 - Multilevel modelling for binary responses
-- 15:00-15:45 - Practical 3
-- 15:45-16:00 - Break 
+- 15:00-15:30 - Practical 3
+- 15:30-16:00 - Break 
 - 16:00-16:20 - Differential processes between groups: random effects
 - 16:20-16:50 - Practical 4
 - 16:50-17:00 - Wrap up and Finish
